# apogee-control-system

./: .gitignore  README.md  platformio.ini
.pio/libdeps/debug/SparkFun BMP581 Arduino Library/: .piopm
.pio/libdeps/debug/SparkFun BNO080 Cortex Based IMU/: .piopm
cm5/: CMakeLists.txt  README.md
cm5/legacy/: data_logger.cpp
cm5/src/: apogee_model.h  constants.h  environment_model.h  flight_computer.cpp  flight_computer.h  kalman_filters.h  main.cpp  math_utils.h
data/: log.csv
data/events/: sample_events.json
data/subscale_1/: SENS000_events.json
data/subscale_3/: SENS010_events.json
docs/: flow.md
include/: serial_protocol.h  telemetry_types.h
lib/: aquire_bno080.cpp  cfd.csv
python/: apogee.py  apogee_lib.py  constants.py  flight.py
src/: apogee_model.h  bmp581_sensor.cpp  bmp581_sensor.h  bno085_orientation.h  bno085_sensor.cpp  bno085_sensor.h  constants.h  convert.py  data_logger.cpp  data_logger.h  environment.py  environment_model.h  filter.py  flight_computer.cpp  flight_computer.h  kalman_filters.h  main.cpp  math_utils.h  pwm_control.cpp  serial_link.cpp  serial_link.h
standalone-c/: .gitignore  Makefile  README.md  arduino_stubs.cpp  main.cpp
standalone-c/include/: Arduino.h
standalone-c/matplotplusplus/source/matplot/core/: figure_type.cpp
standalone-c/matplotplusplus/source/matplot/detail/: exports.h
test/bno085/: test_orientation.cpp
tools/: .tui_settings.json  README.md  decode_sensor_log.py  tui_dashboard.py  tui_event_viewer.py  tui_tail_csv.py  tui_telemetry_viewer.py
